--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tambo-ai/react": "^0.74.1",
     "@valibot/to-json-schema": "^1.5.0",
     "effect": "^3.19.16",
+    "lucide-react": "^0.563.0",
     "next": "14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
     "sury": "^10.0.4",
     "zod": "^3.24.1"
   },
