--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "@tambo-ai/react": "^0.74.1",
     "@valibot/to-json-schema": "^1.5.0",
+    "cors": "^2.8.6",
     "effect": "^3.19.16",
+    "express": "^5.2.1",
     "lucide-react": "^0.563.0",
     "next": "14.2.18",
     "react": "^18.3.1",
@@ -23,6 +25,8 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
